# FastAPI_Todo_App

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
src/: config.py  db.py  dependencies.py  examples.py  exceptions.py  main.py  models.py  schemas.py  todos.py
src/migrations/: env.py
src/migrations/versions/: 358a66698922_created_todo_model.py
templates/: home.html  todo.html
